이미지 경로 변경 (로컬->깃허브)

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img 
-     src="C:\Users\SNYJ_FAFA\Desktop\board.bmp"
+     src="https://github.com/maestro29/WebOmok/blob/main/board.bmp"
      onclick="image_onclick()"
      style="display:block; margin: 0 auto"> 
      <div id="stone_x"></div>
@@ -25,7 +25,7 @@
         }
 
     </script>
-    <img src="C:\Users\SNYJ_FAFA\Desktop\black.png"
+    <img src="https://github.com/maestro29/WebOmok/blob/main/black.png"
      style="position: absolute;
             width : 30px;
             height : 30px;
