--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
         }
 
     </script>
-    <img src="https://github.com/maestro29/WebOmok/blob/main/black.png"
+    <img src="https://github.com/maestro29/WebOmok/blob/main/black.png?raw=true"
      style="position: absolute;
             width : 30px;
             height : 30px;
