--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img 
-     src="https://github.com/maestro29/WebOmok/blob/main/board.bmp"
+     src="https://raw.githubusercontent.com/maestro29/WebOmok/main/board.bmp"
      onclick="image_onclick()"
      style="display:block; margin: 0 auto"> 
      <div id="stone_x"></div>
