--- a/main.html
+++ b/main.html
@@ -23,6 +23,7 @@
             alert("현재좌표 : " + x + ", " + y);
             document.getElementById("stone_x").innerHTML=x;
         }
+        //[ Javascript ] Mouse Event - 클릭한 위치에 이미지 동적 생성하기
 
     </script>
     <img src="https://github.com/maestro29/WebOmok/blob/main/black.png?raw=true"
