--- a/main.html
+++ b/main.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="EUC-KR">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <font size="5em" color="Green"> 재호의 오목교실 재호의 </font>
+    <span 
+        style="font-size:3em; color:blue;"> 
+        이 글자는 스판 스타일 
+    </span>
     <img 
      name=boardImg
      src="https://raw.githubusercontent.com/maestro29/WebOmok/main/board.bmp"
